--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -18,7 +18,7 @@
         <% @swipable_items.each do |item| %>
           <div id="<%= item[:id] %>" class="card-item">
             <div class="me-swipable__item" style="background-image: url('<%= image_url item[:image_url] %>')">
-              <div class="me-swipable__item-overlay" style="background: linear-gradient(to top, <%= item[:dominant_color] %>cb 30%, <%= item[:dominant_color] %>89);"></div>
+              <div class="me-swipable__item-overlay"></div>
               <div class="me-swipable__item-title"><%= item[:name] %></div>
               <div class="me-swipable__item-description"><%= item[:description] %></div>
             </div>
