--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -92,7 +92,7 @@ $gutter: 6px;
     @include add-horizontal-scroll-wrapper();
     @include no-scroll-bar();
     @include mobile-only {
-      padding: 0;
+      padding: 6px 0 0 0;
     }
   }
 
