--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -128,10 +128,10 @@
 
     &-title {
       font-size: 22px;
-      font-weight: 700;
+      font-weight: 300;
       padding: 0 15px;
       max-width: 80%;
-      font-family: "Montserrat";
+      font-family: $font-primary-family;
       @include mobile-only {
         font-size: 20px;
         padding: 0 12px;
@@ -144,7 +144,7 @@
       line-height: 1.1em;
       font-weight: 400;
       padding: 0 15px 15px;
-      font-family: "Varela Round";
+      font-family: $font-primary-family;
       @include mobile-only {
         font-size: 12px;
         padding: 3px 12px 12px;
@@ -159,6 +159,7 @@
       z-index: 2;
       top: 0;
       left: 0;
+      background: linear-gradient(to top, #000000d9 30%, transparent);
     }
   }
 
@@ -319,7 +320,7 @@
     z-index: 2;
     @include mobile-only {
       //display: none;
-      margin: 15px 0 25px 0;
+      margin: 24px 0 0 0;
     }
 
     &.hidden {
@@ -327,7 +328,7 @@
     }
 
     & button {
-      margin: auto 10px;
+      margin: auto 15px;
       display: flex;
       text-align: center;
       height: 62px;
@@ -336,14 +337,13 @@
       -webkit-box-direction: normal;
       flex-direction: column;
       -webkit-box-pack: end;
-      border: 1px solid #e0e0e0;
       border-radius: 100%;
       padding: 0;
       font-family: $font-secondary-family;
       justify-content: center;
       font-weight: 600;
       align-items: center;
-      background: none;
+      background: $border-color;
       @include mdc-button-ink-color($font-tertiary-color);
       //@include mdc-button-outline-color($font-secondary-color)
     }
