--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -192,8 +192,14 @@ $border-color: #e0e0e0;
       cursor: pointer;
       display: flex;
       align-items: center;
-      margin: 2px 6px 2px -18px;
-      color: $font-secondary-color;
+      margin: 0px 12px 0px -12px;
+      color: $font-tertiary-color;
+      background: whitesmoke;
+      border-radius: 24px;
+      height: 40px;
+      width: 40px;
+      border: 0;
+      justify-content: center;
     }
   }
 
