--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -57,13 +57,11 @@
     <% end %>
     <% if ['show'].include?(params[:action]) && mobile_device? %>
       <% if current_user %>
-        <button class="me-top-app-bar__back-button mdc-icon-button"
+        <button class="me-top-app-bar__back-button"
                 onclick="window.AnimateModule.animateBackbutton()">
-          <i class="material-icons">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
               <path d="M20 11H6.83l2.88-2.88c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L3.71 11.3c-.39.39-.39 1.02 0 1.41L8.3 17.3c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L6.83 13H20c.55 0 1-.45 1-1s-.45-1-1-1z"/>
             </svg>
-          </i>
         </button>
         <a class="is-hoverable" href="/">
           <svg xmlns="http://www.w3.org/2000/svg" width="120" height="28" fill="none" viewBox="0 0 120 28">
@@ -141,7 +139,10 @@
     <% end %>
     <section class="me-top-app-bar__section me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
       <% if ['show'].include?(params[:action]) && mobile_device? %>
-          <amp-social-share type="system"class="custom-style"  width="36" height="36"></amp-social-share>
+          <amp-social-share type="system"class="custom-style"  width="auto" height="auto">
+            <span>Enviar</span>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M3.4 20.4l17.45-7.48c.81-.35.81-1.49 0-1.84L3.4 3.6c-.66-.29-1.39.2-1.39.91L2 9.12c0 .5.37.93.87.99L17 12 2.87 13.88c-.5.07-.87.5-.87 1l.01 4.61c0 .71.73 1.2 1.39.91z"/></svg>
+          </amp-social-share>
       <% elsif ['feeds'].include?(params[:controller]) %>
         <%# if current_user.picture %>
           <%= link_to user_path(current_user) do %>
