--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -8,7 +8,8 @@
     overflow: hidden;
   }
 
-  [data-controller="events"][data-action="show"] & {
+  [data-controller="events"][data-action="show"] &,
+  [data-controller="places"][data-action="show"] & {
     @include mobile-only {
       padding-top: 56px;
     }
