--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -75,6 +75,7 @@ amp-social-share.custom-style {
   color: $font-secondary-color;
   padding: 6px 12px;
   margin: 0 -12px 0 0;
+  outline: none;
   & svg {
     fill: $icon-color;
     margin: 0 -3px 0 6px;
