--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -75,7 +75,7 @@ $gutter: 6px;
     letter-spacing: -0.01em;
     @include mobile-only {
       font-size: 18px;
-      padding: 0 $section-padding-phone;
+      padding: 0 12px 0 $section-padding-phone;
       font-family: $font-primary-family;
     }
 
