--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -41,7 +41,8 @@ $border-color: #e0e0e0;
     }
   }
 
-  [data-controller="events"][data-action="show"] & {
+  [data-controller="events"][data-action="show"] &,
+  [data-controller="places"][data-action="show"] & {
     @include mobile-only {
       position: fixed;
       box-shadow: 0px 1px 6px 1px #00000030;
@@ -186,6 +187,10 @@ $border-color: #e0e0e0;
     }
   }
 
+  &__logo {
+    display: inherit;
+  }
+
   &__back-button {
     display: none;
     @include mobile-only {
@@ -199,6 +204,7 @@ $border-color: #e0e0e0;
       height: 40px;
       width: 40px;
       border: 0;
+      outline: none;
       justify-content: center;
     }
   }
