Adjust search page components

--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -23,6 +23,9 @@
         display: none;
       }
     }
+    [data-controller="search"] & {
+      padding: 0 16px;
+    }
   }
 
   .me-collection__title-custom & {
