--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -82,12 +82,10 @@ $box-shadow: 0 0 45px rgba(0, 0, 0, 0.20);
 
   .me-search-field & {
     font-size: 12px;
+    font-weight: 400;
     @include mdc-button-ink-color($font-secondary-color);
-    @include mdc-button-container-fill-color($surface-color);
+    @include mdc-button-container-fill-color($border-color);
     padding: 3px 6px;
-    @include mobile-only {
-      border: 1px solid $border-color;
-    }
     &:hover {
       @include mdc-button-ink-color($brand-color);
       border: 1px solid $brand-color;
@@ -95,7 +93,7 @@ $box-shadow: 0 0 45px rgba(0, 0, 0, 0.20);
     }
 
     @include mobile-only {
-      padding: 3px 8px;
+      padding: 7px 15px;
     }
   }
 }
