--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -22,19 +22,19 @@
     </div> -->
   <%# end %>
 
-  <% if current_user && (current_user&.swipable.dig('events', 'last_view_at').blank? || current_user&.swipable.dig('events', 'last_view_at').try {|last_view_at| last_view_at < (DateTime.now - 8.hours)}) %>
+  <% if current_user && @swipable_items.size > 0 && (current_user&.swipable.dig('events', 'last_view_at').blank? || current_user&.swipable.dig('events', 'last_view_at').try {|last_view_at| last_view_at < (DateTime.now - 8.hours)}) %>
     <div class="me-section">
       <div class="me-section__inner">
         <!-- <div class="me-section__title">
           Você iria neste evento?
         </div> -->
-          <%= render partial: 'components/swipable/swipable' if current_user && @swipable_items %>
+          <%= render partial: 'components/swipable/swipable' %>
       </div>
     </div>
   <% end %>
 
   <% if current_user && @new_events_today.size > 0 %>
-    <div class="me-section">
+    <div class="me-section me-section--condensed">
       <div class="me-section__inner">
         <div class="me-info">
           <div class="me-info__content">
