--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -50,6 +50,33 @@
     }
   }
 
+  &__inner {
+    @include desktop-only {
+      width: $main-content-width;
+    }
+    [data-controller="events"][data-action="show"] & {
+      @include desktop-only {
+        width: calc(100% - 48px);
+      }
+    }
+    .me-section--full & {
+      @include desktop-only {
+        width: 100% !important;
+      }
+    }
+    .me-section--with-padding & {
+      padding: 0 $section-padding-phone;
+    }
+    .me-section--centralized & {
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    .me-section--centralized-small & {
+      max-width: 350px;
+      margin: 0 auto;
+    }
+  }
+
   &--full {
     @include mobile-only {
       padding: 0;
@@ -82,33 +109,6 @@
       margin: 12px 0;
       padding: 12px 0;
       border-radius: $media-border-radius;
-    }
-  }
-
-  &__inner {
-    @include desktop-only {
-      width: $main-content-width;
-    }
-    [data-controller="events"][data-action="show"] & {
-      @include desktop-only {
-        width: calc(100% - 48px);
-      }
-    }
-    .me-section--full & {
-      @include desktop-only {
-        width: 100% !important;
-      }
-    }
-    .me-section--with-padding & {
-      padding: $section-padding-phone;
-    }
-    .me-section--centralized & {
-      max-width: 700px;
-      margin: 0 auto;
-    }
-    .me-section--centralized-small & {
-      max-width: 350px;
-      margin: 0 auto;
     }
   }
 
