--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -75,14 +75,12 @@
       </div>
     </div>
   </div>
-  
+
 <% else %>
   <div id="saves" class="me-saves me-saves--empty">
-    <div class="me-saves__info">
-      <span>
-        Salve eventos com ❤ para vê-los aqui
-      </span>
-    </div>
+    <h2 class="me-saves__title">
+      Salve eventos com ❤ para vê-los aqui
+    </h2>
     <div class="me-saves__list mdc-layout-grid"
          data-target="saves.list">
       <div class="mdc-layout-grid__inner">
@@ -102,4 +100,3 @@
     </div>
   </div>
 <% end %>
-
