--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -40,7 +40,7 @@ $background-secondary-color: darken($background-color, 5%);;
 
 $surface-z10-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
 $surface-color: #ffffff;
-$surface-secondary-color: #f7f7f7;
+$surface-secondary-color: whitesmoke;
 $surface-tertiary-color: darken($surface-secondary-color, 5%);
 
 $font-primary-color: lighten($brand-color-high-contrast, 10%); // #1D2A4C; // #000100;
@@ -48,7 +48,7 @@ $font-primary-color: lighten($brand-color-high-contrast, 10%); // #1D2A4C; // #0
 $font-secondary-color: #4B4B4B; // transparentize($font-primary-color, 0.35);
 $font-tertiary-color: #7D7D7D; // transparentize($font-secondary-color, 0.20);
 
-$empty-color: $surface-tertiary-color;
+$empty-color: $surface-secondary-color;
 
 $media-box-shadow-small: 0 0 3px #00000038;
 $media-box-shadow-large: 0 0 6px #00000038;
