--- a/web/app/assets/stylesheets/components/me-login-buttons.scss
+++ b/web/app/assets/stylesheets/components/me-login-buttons.scss
@@ -2,14 +2,14 @@
   color: red;
 
   &--divider {
-    border-top: 1px solid $border-color;
-    margin: 12px 0 0 0;
-    padding: 24px 0 0 0;
+    border-bottom: 1px solid #E1E1E1;
+    margin: 0 0 12px 0;
+    padding: 0 0 24px 0;
 
     &::before {
       content: "OU";
       position: relative;
-      top: -32px;
+      bottom: -154px;
       font-weight: 600;
       color: $border-color;
       left: calc(50% - 16px);
