--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -1,7 +1,6 @@
-
-
 .me-page {
   color: $font-primary-color;
+  padding-top: 100px;
   @include is-show-in-animated;
   @include mobile-only {
     max-width: 100vw;
@@ -9,7 +8,10 @@
   }
 
   [data-controller="events"][data-action="show"] &,
-  [data-controller="places"][data-action="show"] & {
+  [data-controller="places"][data-action="show"] &,
+  [data-controller="registrations"] &,
+  [data-controller="sessions"] &
+   {
     @include mobile-only {
       padding-top: 56px;
     }
@@ -35,6 +37,12 @@
 
     &-title {
       padding: 0 $section-padding-phone;
+    }
+  }
+
+  &__inner {
+    @include mobile-only {
+      padding: 0 24px;
     }
   }
 
