--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -70,13 +70,13 @@
       <h2>
         <%= data[:title][:principal] %>
         <%# if data[:collection][:detail][:actual_events_in_collection] < data[:collection][:detail][:total_events_in_collection] %>
-        <% unless data[:continue_to].blank? %>
-      <span class="me-see-all is-hoverable"
-            data-fixed="true"
-            onclick="Turbolinks.visit('<%= data[:continue_to] %>')">
-          Ver tudo
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/></svg>
-        </span>
+        <% if data[:continue_to].present? && current_user %>
+          <span class="me-see-all is-hoverable"
+              data-fixed="true"
+              onclick="Turbolinks.visit('<%= data[:continue_to] %>')">
+            Ver tudo
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/></svg>
+          </span>
         <% end %>
         <%= render partial: 'components/follow/follow_button', locals: {
             identifier: data[:identifier],
