--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -13,6 +13,7 @@
     </h1>
     <% if current_user == @user || current_user.admin? %>
       <%= link_to "Editar", edit_user_path(@user) %>
+      <%= link_to "Sair", destroy_user_session_path, method: :delete if current_user.admin? %>
     <% end %>
     <% if current_user != @user %>
       <div class="me-user-profile__follow-button">
