--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -17,7 +17,7 @@
     max-width: unset;
     padding: 24px 0;
     margin: 3px auto;
-    box-shadow: 0px 1px 0px #a0a0a029;
+    // box-shadow: 0px 1px 0px #a0a0a029;
     //border-bottom: 5px solid $surface-tertiary-color;
   }
 
