Adjust animations in page transition only in PWA

--- a/web/app/assets/stylesheets/_mixins.scss
+++ b/web/app/assets/stylesheets/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin is-show-in-animated() {
-  // transition: opacity 250ms ease, transform 250ms ease;
-  // will-change: opacity, transform;
+  transition: opacity 250ms ease, transform 250ms ease;
+  will-change: opacity, transform;
   &.is-animated {
     // opacity: 0;
     @include mobile-only {
@@ -10,8 +10,8 @@
 }
 
 @mixin is-open-up-animated() {
-  // transition: opacity 200ms ease, transform 250ms ease;
-  // will-change: opacity, transform;
+  transition: opacity 200ms ease, transform 250ms ease;
+  will-change: opacity, transform;
   &.is-animated {
     // opacity: 0;
     // transform: translate(0, 85px);
